# avio

./: CMakeLists.txt
config/: toolchain-cross-hi3518e.cmake
main/: hi_main.c  module.h  rtsp_mod.c  rtsp_mod.h
nexus/: list.h  list_test.c  nexus.c  nexus.h  nexus_test.c  pylon.c  pylon.h
src/: avio_api.c  avio_api.h  avio_ini.c  config_site.h  config_vi_chnnl.h  list.c  list.h  list_api.c  list_api.h  pares_config.c  sample_comm_audio.c  sample_comm_venc.c  sample_comm_vpss.c  sample_proc_audio.c  sample_proc_audio.h  sample_proc_video.c  test.ini  uepoll.c  uepoll.h  uthread.c  uthread.h
