PROJECT(avio)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#INCLUDE(${CMAKE_HOME_DIRECTORY}/config/toolchain-cross-hi3518e.cmake)


SET(CMAKE_C_FLAGS "-g -lm -fPIC -pthread ${CHIP_FLAGS}")

FILE(GLOB_RECURSE HEADER_LIST "*.h")

FILE(GLOB_RECURSE SRC_LIST "src/*.c")

SET (RTSP_DIRS ${CMAKE_HOME_DIRECTORY}/rtsp_lib)
SET (INI_DIRS  ${CMAKE_HOME_DIRECTORY}/iniparse)
SET (OS_DIRS  ${CMAKE_HOME_DIRECTORY}/os)

FILE(GLOB_RECURSE INI_SRC_LIST "${INI_DIRS}/*.c")
FILE(GLOB_RECURSE OS_SRC_LIST "${OS_DIRS}/*.c")

SET (INCLUDE_DIRS "")

FOREACH(_HEADERFILE ${HEADER_LIST})
    GET_FILENAME_COMPONENT(_DIR ${_HEADERFILE} PATH)
    LIST(APPEND INCLUDE_DIRS ${_DIR})
ENDFOREACH()

LIST(REMOVE_DUPLICATES INCLUDE_DIRS)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${COMMON_DIR} ${MPP_PATH}/include ${MPP_PATH}/component/acodec ${RTSP_DIRS} ${INI_DIRS} ${OS_DIRS})

LINK_DIRECTORIES(${LIBS_DIR})

ADD_LIBRARY(hi3518e_avio SHARED ${SRC_LIST} ${INI_SRC_LIST} ${OS_SRC_LIST})
SET_TARGET_PROPERTIES(hi3518e_avio 
						PROPERTIES 
						COMPILE_FLAGS ${CHIP_FLAGS}
						LINK_FLAGS	${LIBS_FLAGS}
						)

ADD_EXECUTABLE(avio "main/hi_main.c")
TARGET_LINK_LIBRARIES(avio hi3518e_avio ${RTSP_DIRS}/librtsp.a)

###################################################################
SET (NEXUS_DIRS  ${CMAKE_HOME_DIRECTORY}/nexus)
FILE(GLOB_RECURSE NEXUS_SRC_LIST "${NEXUS_DIRS}/*.c")

ADD_EXECUTABLE(nexus ${NEXUS_SRC_LIST})








